@@ -1,10 +1,11 @@
-$Id: ChangeLog,v 1.12 2004/08/03 06:29:36 eddie Exp $
+$Id: ChangeLog,v 1.13 2004/08/21 07:34:03 nenolod Exp $
 
 ShadowIRCd 3.2:
 
 * Changed hostmasking (+x) to MD5 (uncrackable).
 * Changed config parser.
 * Added a configuration creator by NhJm.
+* Imported 3.1-2 and 3.1-3 changes.
 
 ShadowIRCd 3.1-1:
 
